# LocalPort

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
crates/devspace-cli/: Cargo.toml
crates/devspace-cli/src/: client.rs  main.rs
crates/devspace-cli/src/commands/: down.rs  init.rs  mod.rs  setup.rs  status.rs  up.rs
crates/devspace-core/: Cargo.toml
crates/devspace-core/src/: config.rs  error.rs  lib.rs  types.rs  validation.rs
crates/devspace-daemon/: Cargo.toml
crates/devspace-daemon/src/: caddy.rs  daemon.rs  dns.rs  editor.rs  ipc.rs  main.rs  port_watcher.rs  process_manager.rs  proxy.rs  router.rs
crates/devspace-proto/: Cargo.toml
crates/devspace-proto/src/: messages.rs  methods.rs
crates/localport-core/: Cargo.toml
crates/localport-core/src/: config.rs  error.rs  types.rs
crates/localport-daemon/: Cargo.toml
crates/localport-daemon/src/: caddy.rs  daemon.rs  ipc.rs  main.rs  port_watcher.rs
crates/localport-daemon/src/port_watcher/: ffi.rs  mod.rs  tests.rs
crates/localport-proto/: Cargo.toml
crates/localport-proto/src/: lib.rs  methods.rs
macos/: Package.swift
macos/Resources/: AppIcon.icns  Info.plist
macos/Sources/: AppDelegate.swift  PreferencesWindow.swift  UpdateChecker.swift
macos/Sources/IPC/: DaemonClient.swift
macos/Sources/Launch/: ProjectDetector.swift  ProjectLauncher.swift
macos/Sources/MenuBar/: MenuBarController.swift
macos/Sources/Models/: Project.swift  TrackedWindow.swift
macos/Sources/Setup/: AppScanner.swift  LayoutPickerPanel.swift  OnboardingWindow.swift  ProjectSettingsPanel.swift  UserPreferences.swift
macos/Sources/WindowManager/: BorderOverlay.swift  LayoutManager.swift  ProjectSwitcher.swift  SpaceManager.swift  SwitchHUD.swift  WindowTracker.swift
scripts/: build.sh  setup.sh  uninstall.sh
