[package]
name = "devspace-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "devspace"
path = "src/main.rs"

[dependencies]
devspace-core = { path = "../devspace-core" }
devspace-proto = { path = "../devspace-proto" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
which = "7"
