[package]
name = "devspace-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "devspaced"
path = "src/main.rs"

[dependencies]
devspace-core = { path = "../devspace-core" }
devspace-proto = { path = "../devspace-proto" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "server-auto", "client-legacy"] }
http-body-util = "0.1"
bytes = "1"
which = "7"
libc = "0.2"
