[package]
name = "devspace-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "devspaced"
path = "src/main.rs"

[dependencies]
devspace-core = { path = "../devspace-core" }
devspace-proto = { path = "../devspace-proto" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
libc = "0.2"
