[package]
name = "localport-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "localportd"
path = "src/main.rs"

[dependencies]
localport-core = { path = "../localport-core" }
localport-proto = { path = "../localport-proto" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
libc = "0.2"
libproc = "0.14.11"
